--- a/lib/cloudstack-nagios/templates/cloudstack_capacity_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_capacity_services.cfg.erb
@@ -12,22 +12,22 @@
 #
 ###############################################################################
 
-<% capacity_types.each do |cap_type| -%>
+<% capacity_types.each do |cap_type, cap_values| -%>
 define command {
-        command_name                   cs-nagios_check-capacity_<%= cap_type[:method_name] -%>
-        command_line                   <%= bin_path -%>/cs-nagios check capacity <%= cap_type[:method_name] -w $ARG1$ -c $ARG2$ --config <%= config_file %>
+        command_name                   cs-nagios_check-capacity_<%= cap_values[:method_name] %>
+        command_line                   <%= bin_path -%>/cs-nagios check capacity <%= cap_values[:method_name] %> -w $ARG1$ -c $ARG2$ --config <%= config_file %>
         register                       1
 }
 
 <% end -%>
 
-<% capacity_types.each do |cap_type| -%>
+<% capacity_types.each do |cap_type, cap_values| -%>
 define service {
         hostgroup_name                  Cloudstack-SystemVM
-        service_description             <%= cap_type[:name] -%>
-        display_name                    <%= cap_type[:method_name] -%>
+        service_description             <%= cap_values[:name] %>
+        display_name                    <%= cap_values[:method_name] %>
         use                             Generic-Service,service-pnp
-        check_command                   cs-nagios_check-capacity_<%= cap_type[:method_name] -%>!80!90
+        check_command                   cs-nagios_check-capacity_<%= cap_values[:method_name] -%>!80!90
         register                        1
 }
 
