--- a/lib/cloudstack-nagios/templates/cloudstack_capacity_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_capacity_services.cfg.erb
@@ -15,7 +15,7 @@
 <% capacity_types.each do |cap_type, cap_values| -%>
 define command {
         command_name                   cs-nagios_check-capacity_<%= cap_values[:method_name] %>
-        command_line                   <%= bin_path -%>/cs-nagios check capacity <%= cap_values[:method_name] %> -w $ARG1$ -c $ARG2$ --config <%= config_file %>
+        command_line                   <%= bin_path -%>cs-nagios check capacity <%= cap_values[:method_name] %> -w $ARG1$ -c $ARG2$ --config <%= config_file %>
         register                       1
 }
 
