--- a/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
@@ -36,6 +36,12 @@ define command {
         register                       1
 }
 
+define command {
+        command_name                   cs-nagios_check-diskusage
+        command_line                   <%= bin_path -%>cs-nagios check router disk_usage -H $HOSTADDRESS$ -w $ARG1$ -c $ARG2$ --config <%= config_file %>
+        register                       1
+}
+
 define service {
         hostgroup_name                  Cloudstack-SystemVM
         service_description             Memory
@@ -69,6 +75,15 @@ define service {
         display_name                    RootFS rw
         use                             Generic-Service,service-pnp
         check_command                   cs-nagios_check-rootfsrw!80!90
+        register                        1
+}
+
+define service {
+        hostgroup_name                  Cloudstack-SystemVM
+        service_description             DiskUsage
+        display_name                    DiskUsage
+        use                             Generic-Service,service-pnp
+        check_command                   cs-nagios_check-diskusage!80!90
         register                        1
 }
 
