--- a/lib/cloudstack-nagios/templates/cloudstack_api_hosts.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_api_hosts.cfg.erb
@@ -12,8 +12,8 @@
 ###############################################################################
 
 define hostgroup {
-  hostgroup_name  Cloudstack-SystemVM
-  alias           Cloudstack-SystemVM
+  hostgroup_name  Cloudstack-API
+  alias           Cloudstack-API
   register        1
 }
 
@@ -23,7 +23,7 @@ define host {
   display_name   Cloudstack_<%= zone['name'] %>
   address        localhost
   use            Linux-Host,host-pnp
-  hostgroups     Cloudstack-Base
+  hostgroups     Cloudstack-API
   check_command  check-host-alive
   register       1
 }
