--- a/lib/cloudstack-nagios/templates/cloudstack_storage_pool_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_storage_pool_services.cfg.erb
@@ -21,7 +21,7 @@ define command {
 <% end -%>
 
 define service {
-  hostgroup_name        Cloudstack-SystemVM
+  hostgroup_name        Cloudstack-API
   service_description   Cloudstack Storage Pool
   display_name          Cloudstack Storage Pool
   use                   Generic-Service,service-pnp
