--- a/lib/cloudstack-nagios/templates/cloudstack_asyncjobs_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_asyncjobs_services.cfg.erb
@@ -18,7 +18,7 @@ define command {
 }
 
 define service {
-        hostgroup_name                  Cloudstack-SystemVM
+        hostgroup_name                  Cloudstack-API
         service_description             Cloudstack Async Jobs
         display_name                    Cloudstack Async Jobs
         use                             Generic-Service,service-pnp
