--- a/lib/cloudstack-nagios/templates/cloudstack_storage_pool_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_storage_pool_services.cfg.erb
@@ -11,15 +11,16 @@
 #
 ###############################################################################
 
-<% storage_pools.each do |storage_pool| -%>
+
 define command {
   command_name  cs-nagios_check-storage_pool
-  command_line  <%= bin_path -%>cs-nagios check storage_pool --pool_name <%= storage_pool['name'] -%><%= " --over_provisioning #{over_provisioning}" if over_provisioning != 1.0 && storage_pool['type'] == 'NetworkFilesystem' -%> --zone <%= storage_pool['zonename'] -%> -w $ARG1$ -c $ARG2$ --config <%= config_file %>
+  command_line  <%= bin_path -%>cs-nagios check storage_pool --pool_name $ARG3$ --over_provisioning $ARG4$ -w $ARG1$ -c $ARG2$ --config <%= config_file %>
   register      1
 }
 
-<% end -%>
 
+
+<% storage_pools.each do |storage_pool| -%>
 define service {
   hostgroup_name        Cloudstack-API
   service_description   Cloudstack Storage Pool
@@ -28,6 +29,7 @@ define service {
   check_command         cs-nagios_check-storage_pool!80!90
   register              1
 }
+<% end -%>
 
 ###############################################################################
 #
