fix hostgroup for router services

--- a/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
@@ -30,7 +30,7 @@ define command {
 }
 
 define service {
-        hostgroup_name       Cloudstack-SystemVM
+        hostgroup_name       Cloudstack
         service_description  Memory
         display_name         Memory
         use                  Generic-Service,service-pnp
@@ -39,7 +39,7 @@ define service {
 }
 
 define service {
-        hostgroup_name       Cloudstack-SystemVM
+        hostgroup_name       Cloudstack
         service_description  CPU
         display_name         CPU
         use                  Generic-Service,service-pnp
@@ -48,7 +48,7 @@ define service {
 }
 
 define service {
-        hostgroup_name       Cloudstack-SystemVM
+        hostgroup_name       Cloudstack
         service_description  Network
         display_name         Network
         use                  Generic-Service,service-pnp
@@ -57,7 +57,7 @@ define service {
 }
 
 define service {
-        hostgroup_name       Cloudstack-SystemVM
+        hostgroup_name       Cloudstack
         service_description  RootFS rw
         display_name         RootFS rw
         use                  Generic-Service,service-pnp
@@ -66,7 +66,7 @@ define service {
 }
 
 define service {
-        hostgroup_name       Cloudstack-SystemVM
+        hostgroup_name       Cloudstack
         service_description  DiskUsage
         display_name         DiskUsage
         use                  Generic-Service,service-pnp
