--- a/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
@@ -30,7 +30,7 @@ define command {
 }
 
 define service {
-        hostgroup_name       Cloudstack
+        hostgroup_name       Cloudstack-SystemVM
         service_description  Cloudstack Virtual Router Memory
         display_name         Cloudstack Virtual Router Memory
         use                  Generic-Service,service-pnp
@@ -39,7 +39,7 @@ define service {
 }
 
 define service {
-        hostgroup_name       Cloudstack
+        hostgroup_name       Cloudstack-SystemVM
         service_description  Cloudstack Virtual Router CPU
         display_name         Cloudstack Virtual Router CPU
         use                  Generic-Service,service-pnp
@@ -48,7 +48,7 @@ define service {
 }
 
 define service {
-        hostgroup_name       Cloudstack
+        hostgroup_name       Cloudstack-SystemVM
         service_description  Cloudstack Virtual Router Network
         display_name         Cloudstack Virtual Router Network
         use                  Generic-Service,service-pnp
@@ -57,7 +57,7 @@ define service {
 }
 
 define service {
-        hostgroup_name       Cloudstack
+        hostgroup_name       Cloudstack-SystemVM
         service_description  Cloudstack Virtual Router RootFS rw
         display_name         Cloudstack Virtual Router RootFS rw
         use                  Generic-Service,service-pnp
@@ -66,7 +66,7 @@ define service {
 }
 
 define service {
-        hostgroup_name       Cloudstack
+        hostgroup_name       Cloudstack-SystemVM
         service_description  Cloudstack Virtual RouterDiskUsage
         display_name         Cloudstack Virtual Router DiskUsage
         use                  Generic-Service,service-pnp
