--- a/lib/cloudstack-nagios/templates/cloudstack_router_hosts.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_router_hosts.cfg.erb
@@ -6,7 +6,7 @@ define host {
   display_name   <%= router['name'] %> (<%= router['linklocalip'] %>)<%= " - #{router['project']}" if router['project'] %> - <%= router['zonename'] %>
   address        <%= router['linklocalip'] %>
   use            Linux-Host,host-pnp
-  hostgroups     Cloudstack-SystemVM
+  hostgroups     Cloudstack_<%= router['zonename'] %>
   check_command  check-host-alive
   register       1
 }
