create CloudstackRouter hostgroup

--- a/lib/cloudstack-nagios/templates/cloudstack_hostgroups.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_hostgroups.cfg.erb
@@ -5,3 +5,9 @@ define hostgroup {
   register        1
 }
 
+define hostgroup {
+  hostgroup_name  CloudstackRouter
+  alias           CloudstackRouter
+  register        1
+}
+
