--- a/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
@@ -35,6 +35,12 @@ define command {
         register      1
 }
 
+define command {
+        command_name  cs-nagios_check-active_ftp
+        command_line  <%= bin_path -%>cs-nagios check router active_ftp -H $HOSTADDRESS$ --ssh-key <%= ssh_key %> --ssh-port <%= ssh_port %> --config <%= config_file %>
+        register      1
+}
+
 define service {
         hostgroup_name	     CloudstackRouter
         service_description  Cloudstack Virtual Router Memory
@@ -95,5 +101,14 @@ define service {
         display_name         Cloudstack Virtual Router Conntrack Connections
         use                  Generic-Service,service-pnp
         check_command        cs-nagios_check-conntrack_connections!80!90
+        register             1
+}
+
+define service {
+        hostgroup_name       CloudstackRouter
+        service_description  Cloudstack Virtual RouterActiveFTP
+        display_name         Cloudstack Virtual RouterActiveFTP
+        use                  Generic-Service,service-pnp
+        check_command        cs-nagios_check-active_ftp
         register             1
 }
