add SystemVm hostgroup

--- a/lib/cloudstack-nagios/templates/cloudstack_hostgroups.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_hostgroups.cfg.erb
@@ -11,3 +11,8 @@ define hostgroup {
   register        1
 }
 
+define hostgroup {
+  hostgroup_name  CloudstackSystemVm
+  alias           CloudstackSystemVm
+  register        1
+}
