add snapshots check

--- a/lib/cloudstack-nagios/templates/cloudstack_hostgroups.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_hostgroups.cfg.erb
@@ -16,3 +16,9 @@ define hostgroup {
   alias           CloudstackSystemVm
   register        1
 }
+
+define hostgroup {
+  hostgroup_name CloudstackSSVM
+  alias          CloudstackSSVM
+  register        1
+}
