--- a/lib/cloudstack-nagios/templates/cloudstack_system_vm_hosts.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_system_vm_hosts.cfg.erb
@@ -6,7 +6,7 @@ define host {
   display_name   <%= vm['name'] %> (<%= vm['privateip'] %>) - <%= vm['zonename'] %>
   address        <%= vm['privateip'] %>
   use            Linux-Host,host-pnp
-  hostgroups     CloudstackSystemVm
+  hostgroups     CloudstackSystemVm<%= ',CloudstackSSVM' if vm['systemvmtype'] == 'secondarystoragevm' %>
   check_command  check-host-alive
   register       1
 }
