--- a/lib/cloudstack-nagios/templates/cloudstack_system_vm_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_system_vm_services.cfg.erb
@@ -31,7 +31,7 @@ define command {
 
 define command {
         command_name  cs-nagios_check_systemvm-secstorrw
-        command_line  <%= bin_path -%>cs-nagios check system_vm secstor_rw -H $HOSTADDRESS$ -w $ARG1$ -c $ARG2$ -P $ARG3$ --ssh-key <%= ssh_key %> --ssh-port <%= ssh_port %> --config <%= config_file %>
+        command_line  <%= bin_path -%>cs-nagios check system_vm secstor_rw -H $HOSTADDRESS$ -w $ARG1$ -c $ARG2$ --ssh-key <%= ssh_key %> --ssh-port <%= ssh_port %> --config <%= config_file %>
         register      1
 }
 
